# architecture-governance-copilot

./: .gitignore  AGENTS.md  DEMO.md  README.md  SPEC.md  app.py  pyproject.toml
docs/: CODEX_HANDOFF.md
pages/: generated_outputs.py  human_review.py  project_context.py  review_inputs.py  solution_intent_drafting.py
samples/: expected_result.json  review_metadata.json  review_transcript.txt  si_template.md  solution_intent.md  source_context.txt  supporting_context.md
src/architecture_governance_copilot/: __init__.py  ado_generator.py  extractors.py  governance_service.py  minutes_generator.py  models.py  si_drafting.py  ui_support.py
tests/: conftest.py  test_ado_generator.py  test_app.py  test_extractors.py  test_governance_service.py  test_minutes_generator.py  test_models.py  test_sample_data.py  test_si_drafting.py  test_ui_support.py
video/: BRAND_AND_VISUAL_GUIDE.md  DEMO_ACTIONS.md  EDITING_PLAN.md  FINAL_SUBMISSION_CHECKLIST.md  NARRATION_SCRIPT.md  ON_SCREEN_TEXT.md  RECORDING_CHECKLIST.md  SHOT_LIST.md  STORYBOARD.md  SUBTITLES_DRAFT.srt  TEAM_CONTRIBUTIONS.md  VIDEO_BRIEF.md  VOICEOVER_GUIDE.md
video/assets/: ASSET_SOURCES.md
video/audio/: README.md
video/output/: architecture_governance_copilot_draft.srt  architecture_governance_copilot_human_voice.srt
video/presentation/: Architecture_Governance_Copilot_Video_Deck.pptx  Architecture_Governance_Copilot_Video_Deck_Connected_Architecture.pptx  Architecture_Governance_Copilot_Video_Deck_Revised.pptx  system-architecture.dot
video/tools/: build_human_narration.sh  record_demo.js  (+3 more)
