[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "architecture-governance-copilot"
version = "0.1.0"
description = "Hackathon proof of concept for human-reviewed architecture governance records."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.11,<3",
    "streamlit>=1.46,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
    "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/architecture_governance_copilot"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
docstring-code-format = true
